// go:generate protoc --go_out=. protobuf/history.proto

syntax = "proto3";

package pkginfo;

option go_package = "internal/protobuf;protobuf";

message InstallHistory {
  reserved 3;
  int32 version = 1;
  int64 latest_log_timestamp = 4;
  map<string, int64> install_timestamps = 2;
}
